--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.1.7",
+    "next": "^16.0.10",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwind-merge": "^2.5.4"
@@ -20,7 +20,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.18",
     "eslint": "^9",
-    "eslint-config-next": "15.1.7",
+    "eslint-config-next": "^16.0.10",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.6.3"
